operations/deploy-v1-all-services/dev-deploy-k8s-api-gateway-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-v1
  labels:
    app: api-gateway
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway
      version: v1
  template:
    metadata:
      labels:
        app: api-gateway
        version: v1
    spec:
      containers:
      - name: api-gateway
        image: giodimagio/api-gateway:v1
        imagePullPolicy: IfNotPresent
        # resources:
        #   requests:
        #     memory: 64Mi
        #     cpu: 250m
        #   limits:
        #     memory: 128Mi
        #     cpu: 500m
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  labels:
    app: api-gateway
spec:
  selector:
    app: api-gateway
  type: ClusterIP
  ports:
    - port: 9000
      protocol: TCP
      name: http
      targetPort: 9000
