operations/deploy-v1-all-services/dev-deploy-k8s-frontend-svelte-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-svelte-v1
  labels:
    app: frontend-svelte
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-svelte
      version: v1
  template:
    metadata:
      labels:
        app: frontend-svelte
        version: v1
    spec:
      containers:
      - name: frontend-svelte
        image: giodimagio/frontend-svelte:v1
        imagePullPolicy: IfNotPresent
        # resources:
        #   requests:
        #     memory: 64Mi
        #     cpu: 250m
        #   limits:
        #     memory: 128Mi
        #     cpu: 500m
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svelte
  labels:
    app: frontend-svelte
spec:
  selector:
    app: frontend-svelte
  type: ClusterIP
  ports:
    - port: 4000 
      protocol: TCP
      name: http
      targetPort: 4000
