operations/deploy-v1-all-services/dev-deploy-k8s-microservice1-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice1-v1
  labels:
    app: microservice1
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: microservice1
      version: v1
  template:
    metadata:
      labels:
        app: microservice1
        version: v1
    spec:
      containers:
      - name: microservice1
        image: giodimagio/microservice1:v1
        imagePullPolicy: IfNotPresent
        # resources:
        #   requests:
        #     memory: 64Mi
        #     cpu: 250m
        #   limits:
        #     memory: 128Mi
        #     cpu: 500m
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: microservice1
  labels:
    app: microservice1
spec:
  selector:
    app: microservice1
  type: ClusterIP
  ports:
    - port: 5001 
      protocol: TCP
      name: http
      targetPort: 5001
