operations/deploy-v1-all-services/dev-deploy-k8s-microservice3-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice3-v1
  labels:
    app: microservice3
    version: v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: microservice3
      version: v1
  template:
    metadata:
      labels:
        app: microservice3
        version: v1
    spec:
      containers:
      - name: microservice3
        image: giodimagio/microservice3:v1
        imagePullPolicy: IfNotPresent
        # resources:
        #   requests:
        #     memory: 64Mi
        #     cpu: 250m
        #   limits:
        #     memory: 128Mi
        #     cpu: 500m
        ports:
        - containerPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: microservice3
  labels:
    app: microservice3
spec:
  selector:
    app: microservice3
  type: ClusterIP
  ports:
    - port: 5003 
      protocol: TCP
      name: http
      targetPort: 5003
