operations/deploy-v1-all-services/dev-deploy-istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-gateway-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway
  http:
    - match:
      - uri:
          prefix: 
      route:
      - destination:
          port:
            number: 4000
          host: frontend-svelte.uah-dev.svc.cluster.local
  # - match:
  #   - uri:
  #       prefix: /api/v1/microservice1
  #   route:
  #   - destination:
  #       port:
  #         number: 5001
  #       host: microservice1.uah-dev.svc.cluster.local   # microservice1.uah-dev.svc.cluster.local
  # - match:
  #   - uri:
  #       prefix: /api/v1/microservice2
  #   route:
  #   - destination:
  #       port:
  #         number: 5002
  #       host: microservice2.uah-dev.svc.cluster.local   # microservice2.uah-dev.svc.cluster.local
  # - match:
  #   - uri:
  #       prefix: /api/v1/microservice3
  #   route:
  #   - destination:
  #       port:
  #         number: 5003
  #       host: microservice3.uah-dev.svc.cluster.local   # microservice3.uah-dev.svc.cluster.local
